Style wrap fix.

--- a/Stacksmith Help.xstk/stylesheet_card_3003.css
+++ b/Stacksmith Help.xstk/stylesheet_card_3003.css
@@ -8,14 +8,8 @@
 {
 	font-family: Courier;
 	font-size: 12;
-	font-style: italic;
 }
 .style11
-{
-	font-family: Courier;
-	font-size: 12;
-}
-.style12
 {
 	font-family: Arial;
 	font-size: 13;
@@ -29,28 +23,29 @@
 {
 	font-family: Courier;
 	font-size: 12;
+	font-style: italic;
 }
 .style4
 {
 	font-family: Courier;
 	font-size: 12;
-	font-style: italic;
 }
 .style5
 {
 	font-family: Courier;
 	font-size: 12;
+	font-style: italic;
 }
 .style6
 {
 	font-family: Courier;
 	font-size: 12;
-	font-style: italic;
 }
 .style7
 {
 	font-family: Courier;
 	font-size: 12;
+	font-style: italic;
 }
 .style8
 {
